fixing bug on mobile that prevented footer links from being clickable, had to hide .menu by default

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -85,6 +85,7 @@ $typepography: Space Mono, Courier;
  .menu {
   display: block;
   z-index: 1;
+  display: none;
 
  }
 
